Name:Radio
Version:0.2
Cabal-Version:  >= 1.2
License:MIT
Author:Mike Verdone
Homepage:
Category:
Synopsis:Scripts to run ezstream radio stations
Build-Type: Simple

Executable next_to_play
  Main-Is: PrintNextToPlay.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4,
    process,
    directory,
    haskell98,
    unix,
    time,
    bytestring,
    text,
    xattr >=0.5.3

Executable play_these_next
  Main-Is: PlayNext.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4,
    process,
    directory,
    haskell98,
    unix,
    time,
    bytestring,
    text,
    xattr >= 0.5.3
